Added Blob  storage project

--- a/KuduDummy/Web.config
+++ b/KuduDummy/Web.config
@@ -12,7 +12,9 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-KuduDummy-20160602033909.mdf;Initial Catalog=aspnet-KuduDummy-20160602033909;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
