--- a/BlogStorage/BlogStorage.csproj
+++ b/BlogStorage/BlogStorage.csproj
@@ -73,12 +73,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Constants\BlobStorageConstants.cs" />
+    <Compile Include="Implementations\BlobStorageHandler.cs" />
+    <Compile Include="Interfaces\IBlobStorageHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
