--- a/BlogStorage/packages.config
+++ b/BlogStorage/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="log4net.Appender.Azure" version="1.4.1.0" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
