--- a/KuduDummy/packages.config
+++ b/KuduDummy/packages.config
@@ -6,6 +6,8 @@
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="jQuery" version="2.2.3" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.15.0" targetFramework="net461" />
+  <package id="log4net" version="2.0.5" targetFramework="net461" />
+  <package id="log4net.Appender.Azure" version="1.4.1.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net461" />
@@ -29,9 +31,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
-  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
-  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.2.2" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
@@ -45,13 +47,14 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net461" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net461" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
-  <package id="Respond" version="1.2.0" targetFramework="net461" />
-  <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
+  <package id="Respond" version="1.4.2" targetFramework="net461" />
+  <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="Unity.Mvc" version="4.0.1" targetFramework="net461" />
+  <package id="UnityLog4NetExtension" version="2.0.1.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.1.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="7.0.0" targetFramework="net461" />
